<resources>
    <string name="app_name">ECO Cleaning</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_old_password">Old Password</string>
    <string name="prompt_new_password">New Password</string>
    <string name="prompt_rent_new_password">Confirm New Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_login">LOGIN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Forgot Password?</string>
    <string name="action_i_know">I know my password</string>
    <string name="action_send_pw">Send Password</string>
    <string name="action_change_pw">Reset My Password</string>
    <string name="action_skip">SKIP</string>
    <string name="action_click">Clock In</string>
    <string name="action_send_me_link">Send Me Link</string>
    <string name="action_view_my_attendance">View My Schedule</string>
    <string name="action_apply_leave">Apply For Leave</string>
    <string name="action_submit">Submit</string>
    <string name="action_reg_loc">Register Location</string>
    <string name="action_edit">Edit</string>
    <string name="location">Location</string>
    <string name="account">Account</string>
    <string name="consumables">Consumable</string>
    <string name="capital">Capital</string>
    <string name="all_stock_item">All stock item for requisition</string>
    <string name="action_time_picker">Time Picker</string>
    <string name="action_save">Save</string>
    <string name="login">Login</string>
    <string name="change_password">Change Password</string>
    <string name="project_cleaning">Project Cleaning</string>
    <string name="forgot_password">Forgot your password</string>
    <string name="date">Date</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="mark_as">Mark as</string>
    <string name="full_date">Full Day</string>
    <string name="half_day">Half Day</string>
    <string name="leave_time">Leave Time</string>
    <string name="reason">Reason</string>
    <string name="remark_note">Remark/Note</string>
    <string name="time_sheet">Time Sheet</string>
    <string name="working_hours">Working Hours</string>
    <string name="request_stock">Request Stock</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="select_date">Select Date</string>
    <string name="insp_check">Inspection Check</string>
    <string name="dashboard">Dashboard</string>
    <string name="tomorrow_schedule">Tomorrows Schedule</string>
    <string name="error_email_required">Email is required</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">Username is required</string>
    <string name="error_field_required_pw">Password is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="error_server_something_worng">Somethings is worng</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">Attands\nManagment</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="msg_copyright">copyright IP Websoft 2017</string>
    <string name="msg_copyright2">Project Cleaning 2017 All right Revered</string>
    <string name="msg_fgt_pw">Enter your email below t receive your password reset instruction.</string>
    <string name="msg_splash_cont">Welcome to Project Cleaning\n This container will hold a shot \n impressum of the company</string>
    <string name="msg_forgot_pw_cont">Enter you email below to receiver \n you password reset instructions.</string>
    <string name="msg_success">You have successfully Clocked In\nat the Location at 9:00 am</string>
    <string name="success">Success</string>
    <string name="menu_clock_inout">Clock In/Out</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_timesheet">Timesheet</string>
    <string name="menu_req_stc">Request Stock</string>
    <string name="menu_leave">Leave</string>
    <string name="menu_change_pw">Change Password</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_reg_location">Register Location</string>
    <string name="menu_inspection">Inspection</string>
    <string name="menu_dash">DashBoard</string>
    <string name="attendance">Attendance</string>
    <string name="requeruis">Requires ITO </string>
    <string name="fa_icon_calender">&#xF133;</string>
    <string name="fa_icon_calender_2">&#xF073;</string>
    <string name="fa_icon_clock_in">&#xF017;</string>
    <string name="fa_icon_clock_out">&#xF073;</string>
    <string name="fa_icon_req_stock">&#xF1B8;</string>
    <string name="fa_icon_change_pw">&#xF084;</string>
    <string name="fa_icon_leave">&#xF1AE;</string>
    <string name="fa_icon_logout">&#xF05C;</string>
    <string name="fa_icon_areachart">fa-camera-retro</string>
    <string name="fa_icon_piechart">&#xf200;</string>
    <string name="fa_icon_linechart">&#xf201;</string>
    <string name="fa_icon_eye">&#xF06E;</string>
    <string name="fa_icon_add">&#xF067;</string>
    <string name="fa_icon_sound">&#xF028;</string>
    <string name="fa_icon_reg_loc">&#xF041;</string>
    <string name="fa_icon_click">&#xF00C;</string>
    <string name="fa_icon_minus">&#xF068;</string>
</resources>