<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/col_menu"
    android:paddingTop="30dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/rl_provider_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <ImageView
                android:id="@+id/img_back"
                android:layout_width="30dp"
                android:layout_height="35dp"
                android:layout_marginLeft="25dp"
                android:src="@drawable/ic_arrow_back_white"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_below="@id/rl_provider_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
           <!-- <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/white"/>-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/nav_menu_icon"
                    android:id="@+id/text2"
                    android:layout_centerVertical="true"
                    android:text="@string/fa_icon_calender"/>
                <TextView
                    android:id="@+id/txtNavSchedule"
                    style="@style/nav_menu_item"
                    android:text="@string/menu_schedule"
                    android:layout_toRightOf="@+id/text2" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <TextView
                    style="@style/nav_menu_icon"
                    android:id="@+id/text3"
                    android:layout_centerVertical="true"
                    android:text="@string/fa_icon_calender_2"/>
                <TextView
                    android:id="@+id/txtNavTimeSheet"
                    style="@style/nav_menu_item"
                    android:text="@string/menu_timesheet"
                    android:layout_toRightOf="@+id/text3"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/nav_menu_icon"
                    android:id="@+id/text1"
                    android:layout_centerVertical="true"
                    android:text="@string/fa_icon_clock_in"/>
                <TextView
                    android:id="@+id/txtNavClockInOut"
                    style="@style/nav_menu_item"
                    android:text="@string/menu_clock_inout"
                    android:layout_toRightOf="@+id/text1" />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/grey"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/nav_menu_icon"
                    android:id="@+id/text4"
                    android:layout_centerVertical="true"
                    android:text="@string/fa_icon_req_stock"/>
                <TextView
                    android:id="@+id/txtNavReqStock"
                    style="@style/nav_menu_item"
                    android:text="@string/menu_req_stc"
                    android:layout_toRightOf="@+id/text4"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <TextView
                    style="@style/nav_menu_icon"
                    android:id="@+id/text5"
                    android:layout_centerVertical="true"
                    android:text="@string/fa_icon_leave"/>
                <TextView
                    android:id="@+id/txtNavLeave"
                    style="@style/nav_menu_item"
                    android:text="@string/menu_leave"
                    android:layout_toRightOf="@+id/text5"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/relInspection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_marginTop="10dp">
                <TextView
                    style="@style/nav_menu_icon"
                    android:id="@+id/text11"
                    android:layout_centerVertical="true"
                    android:text="@string/fa_icon_click"/>
                <TextView
                    android:id="@+id/txtNavInspection"
                    style="@style/nav_menu_item"
                    android:text="@string/menu_inspection"
                    android:layout_toRightOf="@+id/text11"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/grey"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/nav_menu_icon"
                    android:id="@+id/text8"
                    android:layout_centerVertical="true"
                    android:text="@string/fa_icon_reg_loc"/>
                <TextView
                    android:id="@+id/txtNavRegLocation"
                    style="@style/nav_menu_item"
                    android:text="@string/menu_reg_location"
                    android:layout_toRightOf="@+id/text8"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/nav_menu_icon"
                    android:id="@+id/text6"
                    android:layout_centerVertical="true"
                    android:text="@string/fa_icon_change_pw"/>
                <TextView
                    android:id="@+id/txtNavChangePw"
                    style="@style/nav_menu_item"
                    android:text="@string/menu_change_pw"
                    android:layout_toRightOf="@+id/text6"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <TextView
                    style="@style/nav_menu_icon"
                    android:id="@+id/text7"
                    android:layout_centerVertical="true"
                    android:text="@string/fa_icon_logout"/>
                <TextView
                    android:id="@+id/txtNavLogut"
                    style="@style/nav_menu_item"
                    android:text="@string/menu_logout"
                    android:layout_toRightOf="@+id/text7"/>
            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>