<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="40dp">
                <ImageView
                    android:id="@+id/img1"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/ic_forgot_pw"
                    android:layout_centerHorizontal="true"
                    android:padding="10dp" />
                <TextView
                    android:id="@+id/txt1"
                    style="@style/styleTxtVeryBigBck"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/forgot_password"
                    android:layout_below="@+id/img1"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:id="@+id/txt2"
                    style="@style/styleTxtSmallBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_below="@+id/txt1"
                    android:gravity="center"
                    android:text="@string/msg_forgot_pw_cont"/>
            </RelativeLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/grey">
                <EditText
                    android:id="@+id/edtEmail"
                    style="@style/AppEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:imeActionId="@+id/login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:text=""
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
            <TextView
                style="@style/styleBtn1"
                android:id="@+id/txtBtnSendPw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/action_send_me_link"
                />
            <TextView
                android:id="@+id/txtBtnIKnowPw"
                style="@style/styleTxtSmlThame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:gravity="center"
                android:text="@string/action_i_know"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
